SONAR-18679 refactored sonar-db-core and sonar-db-dao to match testing strategy